# ChangeLog for app-emacs/typing
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/typing/ChangeLog,v 1.14 2014/03/06 10:28:32 ago Exp $

  06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> typing-1.1.4.ebuild:
  Stable for ppc64, wrt bug #500910

  24 Feb 2014; Chema Alonso <nimiux@gentoo.org> typing-1.1.4.ebuild:
  Stable for amd64 wrt bug #500910

  23 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> typing-1.1.4.ebuild:
  x86 stable wrt bug #500910

*typing-1.1.4 (01 Jan 2014)

  01 Jan 2014; Ulrich Müller <ulm@gentoo.org> +typing-1.1.4.ebuild,
  files/50typing-gentoo.el:
  Version bump. Update HOMEPAGE. Specify LICENSE more precisely.

  04 Nov 2007; Ulrich Mueller <ulm@gentoo.org> typing-1.1.2.ebuild:
  amd64 stable, bug 195512

  03 Jul 2007; Ulrich Mueller <ulm@gentoo.org> typing-1.1.2.ebuild:
  Remove redundant functions.

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/50typing-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  28 Jan 2007; Marius Mauch <genone@gentoo.org> typing-1.1.2.ebuild:
  Replacing einfo with elog

  28 Aug 2005; Olivier Crête <tester@gentoo.org> typing-1.1.2.ebuild:
  Marked ~amd64, thanks to AT AJ Armstrong <aja@gentoo.org> for testing

  20 Aug 2004; Tom Gall <tgall@gentoo.org> typing-1.1.2.ebuild:
  stable on ppc64, bug #58505

*typing-1.1.2 (31 Oct 2002)

  31 Oct 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  typing-1.1.2.ebuild, files/50typing-gentoo.el, 
  files/digest-typing-1.1.2 :

  Initial import.