@@ -2,26 +2,21 @@
 Hash: SHA256
 
 AUX 50typing-gentoo.el 114 SHA256 94a01bad5d800747b57dea5d7803560bc1fa8cfbdc1d43c44ed0f12fd5132b4b SHA512 05981cefaa046c00c1ca4c06af0c7be2a1b7bec87c7626f12f87ea5be7eb6df778e2559ddcbffcc8760224845a24d2f5e9887f8b7e53565881ff9c8632923371 WHIRLPOOL 985c2ea8651147998269dc7331c866690536665fa1d5542334dbd9f29b6d5b7196d0a5e45d1be99b03550bd10372f4b4882492a21c6686e3750fa5017d9989ed
-DIST typing-1.1.2.tar.bz2 4898 SHA256 adea202fd52e38fe935e6e123eb8517312d028fac191d95d66c7db150d00f31c SHA512 e30e79970bb4eb225e102e8483c2ce8281a20d9d1163722838131e0b6699864b4d1e8b4c212551dead9066b36a7e24fd3ec1f6185bba171aeb47205667346158 WHIRLPOOL f63f53eee63e7de36b4e1c8b56c47ed997e36d0466dccd07dc41b613a3bab770d0ecb47da251b03cacb0e04c47b4f6a6c0825bd96720f0c58380ccb823e18b7b
 DIST typing-1.1.4.el.xz 5092 SHA256 6f1c812481f21f610599e446ed408b28cb450b9c9a6923e06bbb73bffc13602a SHA512 9033b4ca2d23de98f8721796c708392b97d49b6719544ad4ee6d73f11ef253600d9c2a0d2b8ea89ef58355d1bfa36244ccd527994170ae0f43404c6ac19b62f3 WHIRLPOOL 2b7be549c67b55e9974e1fa40af0364c0554b8bf672225d2be3f43fc04a7f315907f3b54d2d732bcd04c68fcf894af33a9ce2c6a01660446189386b65ea92b09
-EBUILD typing-1.1.2.ebuild 517 SHA256 07a4e15e622eea33aca89c0a013bc977964dd0d3537f084c6941d68199e844d6 SHA512 85290f90b679d754f1e0a7e93d1fb4acd98060168f010006ad99c3b76946a0caf8271973fb55cf6e22e7524d31f257d26c6a00298622c6a65a236b3a4e1ba0ad WHIRLPOOL d2a46b6329d7870dce76e581d78611c25eda46230256f811834430d6b3293b76b39fe1e4bbe7ffa1e2de0bd7ac5acccdf95a9bb2e8f4b09e19d0b7d0980e185f
 EBUILD typing-1.1.4.ebuild 530 SHA256 d82cccd8ac8b7758a875328027e52d3ed2ff8f72877add11f58d59e981900cf9 SHA512 76df7889be843dcb05aba20df3b73530cf64bcad8fe0a598664711c3096d1b5432397af50175f12ed88cea484f1cb536de109311b30b69cafdd08ae84e7bd2b9 WHIRLPOOL 81b6d86285be7b47672f5a17561aabc8091b9adddbbb9fe967e2efd581193fa7ca98aa7507deb456d83b72c9785126f309c990bf893ec1b9c85bd4a06e3424e0
-MISC ChangeLog 1618 SHA256 dfb268a42a1b4113e19e3218c36a1eea72ad726caf67ae2fef002b1486a08af2 SHA512 07e10225196666b0df1a0459b78f0e2672df8e942e2db9cbc28f79b0bebddbb5db6b5df5e8fd54c5619f31e3eeef1c5a06ac42f6ccef56ca6a24fab27f0f7fa3 WHIRLPOOL d5ce514342a0600d477d711c641d7713d7af26e6b3fffebe88b659272766b92a9d3d2410f5ffd63e44a9af573bcda05efa7528e0ef01465d0df0ce1d0c52afe6
+MISC ChangeLog 1702 SHA256 5b0889633bb04c1a68c293c84ca6d789461a365ba4acc927dd2bd55a834544ad SHA512 ac9b1cf1b91f65f1640d245220eda921515a61a1016afc9b9fe28c5ec9a7518bbdef3e6d06b72233bf1ed2c25e7c64a85f0e8bffcd5e4408e5545c9705b07707 WHIRLPOOL b2b79220d91a0b3de6977294f3ba45db3b261e77a20ce35404865f970d74914adca3e9fd6640930939bbb1019ef2f05748f388ba9d593f778fa01ba31840d5c5
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTGE3RAAoJELp701BxlEWfraIP+wULS4Nkr/P5qOh8Wju65gri
-KkdcKgADv39mUZhM7QZHBLnAWa6XJF/MzhMCWjRA7qPZUqH0MLNmqcH2rpLg+TfI
-s/73oZQzNp+hXrNGv0/qS5U2KMVkz5D9OzhZuG4cOhceOwJz+HKr1dyVLyRsyQCE
-P/K8zW3z8che7IxKp8LqH/NRNMEkvLJG78OfyOYUrcwMXLDh2MkvX9UYgshXYmw6
-DZCjNxvRPRSqvpFpbE58VUQmBUrcb7PzUXOIwaYN1eDCWsbuJI08WBoF/cstgfaA
-KD+gWoumtDlPk8I0wGtUt9KJ9X8G3piY4TFAjWrMxyIzjUENMskmSAy241awgtqC
-ITnBq8UvndgzauagTlkkJ7VYdr7UxSuKPVQ3ekyltYQ1K3S6iaPpxDaK2UFTLWPf
-/vjlJXSiHAV+oHQj0HoB8iYAwVjal6Qe0Xjsvoa8m9ZbzNHo4JvQ04x+frQGQV87
-56kAchyXnzahd+o303nq7H4e+81fWswh38vQrhNyc7XVxpmdpkwqwy4yEMpBdDj7
-2DEwoTGpcC2CgHeknhDtG/XrBaA9PQysh+1kJS7XySgNqlPSAaQx5b9B2R5q18aP
-kimLKN+IjV90dRSaYlue3KrDJM39f1HP2nfi9KlXPosy54jeFuCUV1ATPM6ZAMvN
-3AtKF4Wcl6qg8t3LcZId
-=paDX
+iQGcBAEBCAAGBQJTGPxaAAoJEJQzkH1pP7W41mAMAJdVlFnS5Za3V2+WUTtxTeDo
+oktkRl4G9M1QUzy3gAme5FNGosYOWnL7AOCr+m86grykmBtUT06awJ8vpm80h655
+qoviKsRHxDhXkQQVDDlmP4Vqb/jKDO4YRR4Sz1CeGYX1xxM4X6NuxrLGvxtAC4Y/
+xKexDc8o0/VUVBsfY13Z8bfOIAioQUE3ZU8iI5oQVmamWqndx/rKqbkP1fEaE9h1
+ZQ4Ez9H9IrbC1qZUoy3hIMAl0xidtSOhtQNMWYalD9kYuX3FGRM7m/6hzBDOcoBy
+JnPXPAqdGxZ9EYrFGcb3vvvLVk8EB1NE69+/5WuGr8Lw9a6odhJZLXrXHhCSvxiQ
+FmkviZos2jL96rpLJT9lNUah+hcGgZfYfZNF0YHs5+gayl9TbaiaL6o+i0GqmrXE
+3EhjjLnWDC4p31Tg6+ELdEz9hGIfR+w7vCMp9WWkCvZKsMoum1Qjfhoe279DJitZ
+3t1VIDjdJoCHrRj4Bdr8kAM/EQqm1dg8Vhv1W2e9VQ==
+=s+V2
 -----END PGP SIGNATURE-----
