@@ -4,14 +4,14 @@ Hash: SHA256
 AUX libsndfile-1.0.17-regtests-need-sqlite.patch 894 SHA256 c53026864c6a05b1ccc8b12e7af895f5d0e2d3a00335fd9f49ed7cc9aecece73 SHA512 1c914a1e51b15149bdba7d242f1ce6979d36cee7e6a6771c6b301d309805e1d5c9db28d4ab968b573504b88a9531c1a3b67af8d92d69f59c047ba692746ce5ed WHIRLPOOL efdf9e09c71f4c3701ebdcc9f300490abed19b096495d0b9a45352f6b996fa1856457e7f5a022ea0f4a559d62e4453899b1239b902f19dace5b9569825dcb8f7
 AUX libsndfile-1.0.25-make.patch 444 SHA256 7962f824fb339c213e45b30f13d35b26069f878fa163f3eafced35250e7090be SHA512 4a5b92904ac15b3116ea864a77f77c504751630ed9eadbe520466410f27179729a1493099f7229a08755ef50a91b08bb2b27fa14c99d84418a08de22bdab131d WHIRLPOOL feabd9d6d96feea30ffd174a7045a3791883a5216ee534c22ef78624e4391af741b86c3e4046144a942617171607986284315eebd5d00d98091de1a634614d93
 DIST libsndfile-1.0.25.tar.gz 1060692 SHA256 59016dbd326abe7e2366ded5c344c853829bebfd1702ef26a07ef662d6aa4882 SHA512 4ca9780ed0a915aca8a10ef91bf4bf48b05ecb85285c2c3fe7eef1d46d3e0747e61416b6bddbef369bd69adf4b796ff5f61380e0bc998906b170a93341ba6f78 WHIRLPOOL 37ef0a66f11d3f60741fe40bce2b255f44284cf78f7c762542def2aab0eefed1360181bb7f29b9850c11e8672a78bc5a687bc04f2cc349e45dfd24721bea8f29
-EBUILD libsndfile-1.0.25-r1.ebuild 2832 SHA256 d9e15ac04d033115acb90e5ec6435d2aaa12935f542f10e689c6c8e6d2758db1 SHA512 9dbe1785b388bbb8e12d2139e4e6fb5545718d26e3e6eddf1e1e54d575f709be29f02f39872c92d7eb963989c0082b5a1224f84ccd02049f63d338768aec8578 WHIRLPOOL c0460553577ae81f3513f63e062e48c6a2d7b519ab82731894ba9f1284a1bcc7d2aa665c7c8e86f4be5ec572b8851217beecce1ef8515b1975091a5c54b894c9
+EBUILD libsndfile-1.0.25-r1.ebuild 2830 SHA256 b132b1ce363321113b0a299fe02eb4dbeb9e85f5301dcab160d051887cc8cad8 SHA512 99a6ca15c19cf352a1326bf951c501069219034646f540a8af9825371b0b9a70cd1bc25cec7bfa9256e306b4b7a73c9fa3f949e156beb4c95b097e3ae2ba9b3f WHIRLPOOL 6f5dbfc72363a17247c63777611b79631a519c1eae80243368f6daba73c6ecd690ceca970e6d00d939bfc606ead1a0444dba0c02f9966c21fea132df7329a68b
 EBUILD libsndfile-1.0.25.ebuild 1904 SHA256 f784035e9140cabc2e9da3e2f4287fbaedddbdb0e1953cf8663fe7e16b23e5fa SHA512 5c4abd50566e953b939905d58f3726a776c42138dee2750eed1bc6ae2c531c9ef02421d2e58f35c598dfb5630be60b153b1851828bfef738f0ff3900ff3e800a WHIRLPOOL 0e4c5dd1742754907abcd3a011bbd3423844182afb897a6732cf1df4533112b56b0c8bcc564eec8200499dceab0e097465f155a01d69ab4b381fd40afa253723
-MISC ChangeLog 20949 SHA256 e41f416e4b28e5fb61e1ef8efd6e61fae0c21f37a0577783c924f5340915b0b3 SHA512 7428464b19e15f8119538a6792c86cf213fe7def6149e3c5fde5840993a718c98154de3d3d4758a08571faed0bf3b523a0c82356787794763d0ab08793629396 WHIRLPOOL e58800467872605c15ba9fb738dd08fec7cd2c2dbcfed4e88a30bb1f98b60d13f0ee187036b4f3aa316303e75d4fd4f24b989a55ef4555e947907abc892e6698
+MISC ChangeLog 21050 SHA256 a03738fb053cbf5ca971cd52e370a70dfa7b649070d1c8ad7743f0db9138249e SHA512 f7e5b36b7fa050e9c43e070e520f28377d48e30a5cca74dc460737bd2c93f533b3379b7483f347d2265c8296fdf6699d5a7bdf7c416a160be610d9537f4cbf68 WHIRLPOOL c5e649d2edb9ec218d86ef8cba72b66566c86ad01e153b03f183485159fab44e56a1c7ccb3e88c733fb96dc0d5c4b8dca470e240f664e25f61d6d9c37791405d
 MISC metadata.xml 160 SHA256 6bafe4a5c7b42309f124ebc2a9d78ebe5379aec4dcdc88c0bda2ab79c9851a6b SHA512 f00066790833ce0ac73de2a96f22bc5ba7b9440a8f73749e2ab52f85038a05d3f768fe6ad59b15430b39b3c36163ae60b5e32d0c323326bb9427529c365549b9 WHIRLPOOL 0e3afa7015a86fdd97bcf0aa4d3b0063e87e34fffeb907b1c7c25c3b662849fefa7e45330d5aa697c7d65b24647d0ecefdfeb6b83b27645c12f2afb2c21be423
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMXl+sACgkQkKaRLQcq0GI2QgCfSjD8YRfS+CWfjGCTWOuOcIti
-kDsAn3ebZFaoV1kV6kn5sZ9kvUb8nv5M
-=IWV1
+iEYEAREIAAYFAlMY+fwACgkQCaWpQKGI+9RVfQCeIqroA1Kw2hqdkD/r0N34pchY
+1x4AmgNOuYApyWl1nNA8P+HR1HppZ2LE
+=w2oR
 -----END PGP SIGNATURE-----
