@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm setup unpack
-DEPEND=>=virtual/emacs-21
-DESCRIPTION=The Typing of Emacs -- an Elisp parody of The Typing of the Dead for Dreamcast
-HOMEPAGE=ftp://ftp.cis.ohio-state.edu/pub/emacs-lisp/archive/
-KEYWORDS=amd64 ppc64 x86
-LICENSE=GPL-2
-RDEPEND=>=virtual/emacs-21
-SLOT=0
-SRC_URI=mirror://gentoo/typing-1.1.2.tar.bz2
-_eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=eaaae1da59894577917207fa25d49326
