@@ -4,10 +4,10 @@ DESCRIPTION=A C library for reading and writing files containing sampled sound
 EAPI=5
 HOMEPAGE=http://www.mega-nerd.com/libsndfile
 IUSE=alsa minimal sqlite static-libs test abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32
-KEYWORDS=~alpha amd64 arm ~hppa ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=~alpha amd64 arm ~hppa ia64 ~mips ~ppc ~ppc64 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=LGPL-2.1
 RDEPEND=!minimal? ( >=media-libs/flac-1.2.1[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] >=media-libs/libogg-1.1.3[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] >=media-libs/libvorbis-1.2.3[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) alsa? ( media-libs/alsa-lib ) sqlite? ( >=dev-db/sqlite-3.2 ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-soundlibs-20130224-r6 !app-emulation/emul-linux-x86-soundlibs[-abi_x86_32(-)] )
 SLOT=0
 SRC_URI=http://www.mega-nerd.com/libsndfile/files/libsndfile-1.0.25.tar.gz
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	autotools-multilib	5beadd9860130ff93bfad7eb91d499e9	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multilib-build	198e1c7095dbce1ca2848aed0f96bf60	multilib-minimal	a481090a413ba6970bd9643494ef982f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	86e503f2f5e7da7163dc3e07c12cea62	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=7a5a7d2316ffc46a82f0bf24f8c4fc23
+_md5_=4f1e58bc11b60fc493d43c204d4e867f
