@@ -3,7 +3,7 @@ DEPEND=>=sys-apps/dbus-1.2 >=dev-libs/dbus-glib-0.94 >=dev-libs/glib-2.30 >=dev-
 DESCRIPTION=Universal network configuration daemon for laptops, desktops, servers and virtualization hosts
 EAPI=5
 HOMEPAGE=http://projects.gnome.org/NetworkManager/
-IUSE=avahi bluetooth connection-sharing consolekit dhclient +dhcpcd gnutls +introspection kernel_linux +nss modemmanager +ppp resolvconf systemd test vala +wext +wifi test
+IUSE=avahi bluetooth connection-sharing consolekit dhclient +dhcpcd gnutls +introspection kernel_linux +nss +modemmanager +ppp resolvconf systemd test vala +wext +wifi test
 KEYWORDS=~alpha amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc x86
 LICENSE=GPL-2+
 RDEPEND=>=sys-apps/dbus-1.2 >=dev-libs/dbus-glib-0.94 >=dev-libs/glib-2.30 >=dev-libs/libnl-3.2.7:3= >=sys-auth/polkit-0.106 >=net-libs/libsoup-2.26:2.4= >=virtual/udev-165[gudev] bluetooth? ( >=net-wireless/bluez-4.82 ) avahi? ( net-dns/avahi:=[autoipd] ) connection-sharing? ( net-dns/dnsmasq[dhcp] net-firewall/iptables ) gnutls? ( dev-libs/libgcrypt:0= net-libs/gnutls:= ) modemmanager? ( >=net-misc/modemmanager-0.7.991 ) nss? ( >=dev-libs/nss-3.11:= ) dhclient? ( =net-misc/dhcp-4*[client] ) dhcpcd? ( >=net-misc/dhcpcd-4.0.0_rc3 ) introspection? ( >=dev-libs/gobject-introspection-0.10.3 ) ppp? ( >=net-dialup/ppp-2.4.5[ipv6] ) resolvconf? ( net-dns/openresolv ) systemd? ( >=sys-apps/systemd-183 ) || ( sys-power/upower >=sys-apps/systemd-183 ) consolekit? ( sys-auth/consolekit ) wifi? ( >=net-wireless/wpa_supplicant-0.7.3-r3[dbus] )
@@ -11,4 +11,4 @@ REQUIRED_USE=modemmanager? ( ppp ) ^^ ( nss gnutls ) ^^ ( dhclient dhcpcd )
 SLOT=0
 SRC_URI=mirror://gnome/sources/NetworkManager/0.9/NetworkManager-0.9.8.8.tar.xz
 _eclasses_=bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	40081e8c7e7f7c4f9db349a1d6d52925	gnome.org	8fef8f967214f56e08fa92d61163d891	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	fac675dcccf94392371a6abee62d909f	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	udev	a9a8d051efb42bfe884c1db82ce161de	user	d0a4d0735a6c0183d707ca919bd72f28	vala	b365480bc54c4e356dc1e953da9fe356	versionator	a8a3963967d6140be9a14b08bb8f047f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=a8f69f357afd55980ddf3c438b81ff88
+_md5_=375348b9e6d41f3e178e458f8aec44ad
