@@ -26,25 +26,13 @@ AUX nm-system-settings.conf-ifnet 70 SHA256 34f53d9ac1ad65eda6942dc3059117f60f63
 DIST NetworkManager-0.9.6.4.tar.xz 1968564 SHA256 511b411e055d187bc8f26c519fdb3e55e07fc40d4adecbbec623c0249380a7eb SHA512 900eb30f7fed35d43f2c1003fcf7fc0b6ab9c5a9f0a14777d4636372376af8477e63fc7fc9b05d2f281d48de658d96d9b30f44851af8ae2b4271bb2b5c2cb669 WHIRLPOOL b87903e4cbb3efcec17b25e74dd67dc6a81a6d553df57e9c699bb1f0d40fe6d611953f6baaeca48ef4387316980d775ec2b07a9df06ecb5f03c10dffc2b60584
 DIST NetworkManager-0.9.8.8.tar.xz 2026860 SHA256 8a0a3de9cd2897f778193aa5f04c8a6f6f87fe07f7a088aab26d2b35baa17a55 SHA512 d65ab18642e7aff09d64ef97bb87324eb10955c71db5896d326f2f9acc340ae185b701405a441998555ac080c95ffafd32dfcbe8c8cca00ecffa64873d0bbd9f WHIRLPOOL 2d71561619003fbfdf9ef547e5ede49860fe891434be9948f50ed751b8ffbc961c87d804ea6676f5b2dad2ef5889f70afb05ce3ef374c8f47d1bba60931eae96
 EBUILD networkmanager-0.9.6.4.ebuild 7528 SHA256 d1beabae169c44e904b08349354c6f08951403b215078acf44182d18d18dc47a SHA512 4923345662ac03f50cad820d7d6fa43853559eb3a4f0f54255918cc0b39e6359a72f25aff2ead92ff7bb36943a494908d907f862e5c01e1c11ac808d4cc37b83 WHIRLPOOL 73048473fbe83b576f3abb9133b6b6dbd9a1aa2feea26ade80f87cfb7e26b5068b9fb4cc3384c1480d078153fc9f26f0fe0eb46dc08d9cd92a91370e8795daf7
-EBUILD networkmanager-0.9.8.8.ebuild 8263 SHA256 af8998091c6c248bc9808193cf31fff11c6e4178b26a90ec3882993803e4bcc0 SHA512 bdf343d07789f2f32299b525586141a6593e0066f240880566acd5c936cd2fa3e874c2a54de8d9c5d8a210b008bbc282be39c8973b8752d8f84c3c27f0d29f34 WHIRLPOOL 084beed4a4958d73dfd81736b992a452237390825eb148ea60f9eb8a99fd6029e72ed1706a158a5fc2cab23487886fe869a1cc979fe12344abaab87b89179b72
-MISC ChangeLog 47316 SHA256 f9ecd48b17ac9ab8574af076fc00e3cfd438f5fe1f05908ff061efa1d805c4a5 SHA512 6b2aafbf4e639d48aed7fe62e5f299a52a90ea54a845ee8f59cb66f1c012fdc2184d47c0862f4929eb9516d8c3095bbb8a6e59da575bfed8fa010c3dedbc6053 WHIRLPOOL 5cc51f492fd961362b30b9ad6868ede2ab1f83b0a8ce5352371a5c10889570509af6852fa9b2a990494b25e0b4fbfe848588a0c3b209a58a96f16a1a89b87f0b
+EBUILD networkmanager-0.9.8.8.ebuild 8264 SHA256 d7b33d631a01c544ff673055a4f2e8d50b1300bf04e937b42302d0e176d23f66 SHA512 939d7b24790506d6dbb22bf85aaeb690093f5ff3063ea64f9d93a110dfb203c677d6c0e81faa71b0a34f7cb33d7af8a70ba2503dbee91406b140e8493b3191fd WHIRLPOOL 32568f45aa3490d6b9ede34685bf83bf763dc55e003143de17ea0cd49543d426f6a33f1e8f0a6813432a29bd3ca40e8a4ea432f1c7e65812ad3d1fb4d053f1b0
+MISC ChangeLog 47539 SHA256 1f2c927a64c3769fc66d08b5f49654b9bd5b5d553c49575b7d99f2cb817e5d02 SHA512 c4aacd2176fb83448b2a326b494fdc5f8474c5d2f35075d98fd2262e3bb07a90f515848734a61be37a428d096b7387da5414b7af481903e8a7082df4f87db838 WHIRLPOOL 6c930177f6e60a50ca597ebe195f2c4978d011678f4c4df84a03ed60f7a610737934375fe984e74ba7ebb63d9225b1bc4cea7f82ca0c9a0850c0f259f6f52911
 MISC metadata.xml 1432 SHA256 473cf4f4e96a9d2ba397bf2526ea54565ff8901e358e2e47fd395a27a00fa201 SHA512 1007fac4c7de320b942d41cc8ce04648077c7aaff2daf18423be86caa322e4dfae4ed009becbfb22e324de9d65e261bb9c410f240ec4700ffbeb8325c6181a62 WHIRLPOOL 52ae999e503fed880202a1d7af606ab3678f43e25496ce043a58d83a4db606e17e8c0375c60471baa38251a1e48077c030d4e023d5edcd846c69af82cfed504a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTElwzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOGX8P/jgP1jaenDgKaVPIwYboDsEc
-ZT/lBPebnL3p3bSjufN28jkzPvWg00szvIBO/fbrPVXXBZbpSUVkMVzFAjOXdumH
-662WSIV6/FMTzEwTuUSqfsM5Zw657GYteH277+7JkK7WxDdKW8EOSPXhp8yMVZ+P
-i9mOJGdgYixaD9nMop5EfQxYycYYpnDfAFO4Mg9vSJAfyCXf+DyvcTvvZ/WoH8Sz
-LyeY7QMScGm33cWQz2Ow/b7Ii2AOxd526Rkfo6Zm3s26AEQs/NEqEIbs0ulMba6b
-IeL1KY3ZZ0hlKITj/0T1re41a0FhVlEo4eT6zaJsU7A0k1DyrkD6h4aBLfwP4We1
-WK7NoLQUD3X43v1d98CfaMnu7vWTVaiuSNsJASU3aRcNIUN+K8EQUNJ3vbu8KhGz
-nybIcKNf9TelsLJ7kRIxpPldD/b+UrHuDOYATHSJEJI28CKOl5n3XqRb+13enN7r
-Oa6yPXNowclgD9qix477ABBNedWlxvNrnK4eA1qyqTjOm1tfcP2H25kpWdmuIRc5
-ud8J+G2mZBNj06adKflUxDAhIcVRGWZtUDN2nrLFkLpXNa67RqgIrjl+wUQyurft
-9W55KA9jaB+rx7eFQ/QPiM0qwrPU9hVxNvaE42pGMcPmClXQsoILA+IZAB1ytlPz
-yrPtBVZnyXIwCzZI8d8i
-=/xdY
+iEYEAREIAAYFAlMY+AMACgkQCaWpQKGI+9TkygCeIzv2NMueGYAkT36wzClRgaLi
+iEIAoIhQIjqVSwaTwJ4qngzt7PJ2FySS
+=pNOI
 -----END PGP SIGNATURE-----
