@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libsndfile
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libsndfile/ChangeLog,v 1.142 2014/03/05 21:24:53 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libsndfile/ChangeLog,v 1.143 2014/03/06 22:43:06 pacho Exp $
+
+  06 Mar 2014; Pacho Ramos <pacho@gentoo.org> libsndfile-1.0.25-r1.ebuild:
+  x86 stable, bug #502210
 
   05 Mar 2014; Markus Meier <maekke@gentoo.org> libsndfile-1.0.25-r1.ebuild:
   arm stable, bug #502210
