@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/typing
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/typing/ChangeLog,v 1.14 2014/03/06 10:28:32 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/typing/ChangeLog,v 1.15 2014/03/06 22:46:55 ulm Exp $
+
+  06 Mar 2014; Ulrich Müller <ulm@gentoo.org> -typing-1.1.2.ebuild:
+  Remove old.
 
   06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> typing-1.1.4.ebuild:
   Stable for ppc64, wrt bug #500910
